--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^2.6.5",
     "quasar": "^1.0.0-beta.1",
     "vue": "^2.6.10",
+    "vue-qrcode-reader": "^2.0.1",
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
